# ai-trading-research

./: .gitignore  README.md  pyproject.toml
app/ai/: explainer.py
app/backtest/: engine.py  metrics.py
app/core/: types.py
app/data/: ingest.py  market_context.py  sector_context.py  universe.py
app/features/: price_features.py
app/report/: charting.py  csv_localizer.py  daily_value_tracker.py  report_builder.py
app/strategy/: rules.py  scanner.py  scoring.py
app/us_equities/: config.py  daily_logic.py  (+6 more)
config/: strategy_13_points.yaml  us_equities_daily.yaml  us_equities_intraday_sqlite.example.yaml  us_futu_screener.yaml
docs/: openclaw_daily.md  openclaw_multi_agent_framework.md  us_auto_stock_quant_system.md  us_equities_intraday_data_contract.md  us_equities_project_structure.md  us_equities_strategy_catalog.md  us_futu_mrmc_nx_mapping.md
notebooks/: 01_signal_labeling.ipynb  02_backtest_review.ipynb
openclaw/: agent_roles.yaml  handoff_schema.yaml  task_playbook.md  workflows.yaml
reports/: cup_with_handle_latest_scan.csv  latest_report.md
scripts/: batch_scan.py  demo_research.py  export_annotation_cases.py  generate_daily_report.py  review_symbol.py  run_openclaw_daily.py  run_openclaw_daily.sh  run_us_equities_daily.py  screen_us_stocks.py  send_openclaw_telegram.py  validate_signal_history.py  validate_three_layer_filter_history.py
tests/: test_backtest.py  test_csv_localizer.py  test_daily_value_tracker.py  test_data_sources.py  test_explainer.py  test_rules.py  test_scanner.py  test_three_layer_filter.py  test_validation_config.py
(+96 files in other folders)
